--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <body>
         <h1>Hello World</h1>
         <p>I'm hosted with GitHub Pages.</p>
-        <p>please don't break</p>
+        <p>please don't brea</p>
     </body>
 </html>
