--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <body>
         <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-        <p>please don't brea</p>
+        <a href="dancerssymposium1.github.io/mania_program.pdf" target="_blank">PDF.</a>
     </body>
 </html>
